--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-pandas
-gspread==3.7.0
-google-auth==2.7.0
-google-auth-oauthlib==0.5.2
-google-auth-httplib2==0.1.0
-google-api-python-client==2.39.0
+streamlit==1.22.0
+pandas==2.0.3
+sqlite3
+google-auth==2.20.0
+google-auth-oauthlib==0.7.1
+google-api-python-client==2.76.0
 reportlab==3.7.0
