--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.22.0
-pandas==2.0.3
-google-auth==2.20.0
-google-auth-oauthlib==0.7.1
-google-api-python-client==2.76.0
-reportlab==3.7.0
+streamlit
+pandas
+google-auth
+google-auth-oauthlib
+google-api-python-client
+reportlab
